# digse

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  daemon.rs  filters.rs  lib.rs  main.rs  output.rs  pidfile.rs  search.rs  start.rs  uninstall.rs
crates/cli/src/startup/: linux.rs  macos.rs  mod.rs  windows.rs
crates/core/: Cargo.toml
crates/core/src/: engine.rs  error.rs  filter.rs  lib.rs  query.rs  result.rs
crates/engines/: Cargo.toml
crates/engines/src/: acfun.rs  adobe_stock.rs  ahmia.rs  alpinelinux.rs  annas_archive.rs  ansa.rs  aol.rs  apkmirror.rs  apple_app_store.rs  apple_maps.rs  archlinux.rs  artic.rs  artstation.rs  arxiv.rs  astrophysics_data_system.rs  azure.rs  baidu.rs  bandcamp.rs  base.rs  bilibili.rs  bing.rs  bing_images.rs  bing_news.rs  bing_videos.rs  bitchute.rs  boardreader.rs  bpb.rs  brave.rs  braveapi.rs  bt4g.rs  btdigg.rs  cachy_os.rs  cara.rs  ccc_media.rs  chatnoir.rs  chefkoch.rs  chinaso.rs  cloudflareai.rs  command.rs  core.rs  (+199 more)
crates/http/: Cargo.toml
crates/http/src/: client.rs  lib.rs  rate_limit.rs
crates/parser/: Cargo.toml
crates/parser/src/: html.rs  json.rs  lib.rs
docs/: index.html  install.ps1  install.sh
