[package]
name = "digse-engines"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
digse-core = { path = "../core" }
digse-http = { path = "../http" }
digse-parser = { path = "../parser" }

serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2.1"
scraper = "0.18"