[package]
name = "digse-engines"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
digse-core = { workspace = true }
digse-http = { workspace = true }
digse-parser = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2.1"
scraper = "0.18"