[package]
name = "digse-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
governor = { workspace = true }
moka = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }