[package]
name = "digse-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }